fix(ui): replace logo and favicon with updated image assets
- Change favicon from SVG to PNG format in index.html
- Replace gradient circle logo with logo.png image in Header component
- Update Footer component logo to use logo.png image instead of styled text block

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CFO EDGE360 | Virtual CFO Services - Global Financial Leadership</title>
     <meta name="description" content="CFO EDGE360 provides virtual and fractional CFO services globally. Strategic financial leadership, cash flow optimization, investor reporting, and more. Serving USA, Europe, Canada, Australia." />
